<resources>
    <string name="app_name">FlickrClone</string>
    <string name="flick">flick</string>
    <string name="r">r</string>
    <string name="flick_logo">Find your inspiration…</string>

    <!-- LoginActivity -->
    <string name="phone_login_button">Login with phone number</string>
    <string name="email_login_button">Login with email</string>
    <string name="later_login">LATER!</string>

    <!-- MainActivity -->
    <string name="button_search">Search</string>
    <string name="hint_input_text">Photos, people, or groups</string>
    <string name="button_show_recent">Show me recent photos</string>
    <string name="spinner_message_error">Please selected a item from de spinner</string>
    <string name="edit_text_message_error">Please insert a valid value</string>
    <string name="not_implemented">Not already implemented</string>

    <!-- PhotoSearchActivity -->
    <string name="message_internet_disable">Image not available. You can click here to see more information if it is available</string>
    <string name="message_not_info_available">Sorry, not information available</string>

    <!-- PhotoRecentActivity -->
    <string name="action_bar_title_recent">Recent</string>

    <!-- PhotoInfoActivity -->
    <string name="comments">Comments…</string>
    <string name="no_tittle">No title</string>
    <string name="no_username">No username</string>
    <string name="no_realname">No real name</string>
    <string name="no_description">No description</string>
    <string name="no_date">No date</string>
    <string name="no_location">No location</string>
</resources>
