<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_app"
    tools:context="com.estebanmoncaleano.flickrclone.LoginActivity">

    <TextView
        android:id="@+id/tv_brand_flick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flick"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_brand_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tv_brand_flick"
        android:layout_toRightOf="@+id/tv_brand_flick"
        android:text="@string/r"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_login_email"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@color/colorPrimary"
        android:onClick="onPhoneLogin"
        android:text="@string/phone_login_button"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/bt_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_login_later"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@color/colorAccent"
        android:onClick="onEmailLogin"
        android:text="@string/email_login_button"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/tv_login_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/button_margin"
        android:gravity="center"
        android:onClick="onLaterLogin"
        android:text="@string/later_login"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold" />

</RelativeLayout>
